# writer_agent

./: .gitignore  README.md
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_add_core_tables.py  0002_add_brief_messages.py  0003_add_memory_chunks.py  0004_add_app_settings.py  0005_add_kg_and_lint_tables.py  0006_add_propagation_tables.py  0007_add_open_threads_tables.py  0008_add_exports_glossary_tables.py
apps/api/app/: desktop_server.py  main.py
apps/api/app/core/: config.py
apps/api/app/db/: models.py  session.py
apps/api/app/llm/: client.py  embeddings_client.py  openai_client.py
apps/api/app/prompts/: brief_builder_system.md  brief_builder_user.md  critic_system.md  critic_user.md  json_repair_system.md  json_repair_user.md  kg_extract_system.md  kg_extract_user.md  novel_beats_system.md  (+35 more)
apps/api/tests/: conftest.py  test_artifact_versions_memory_indexing.py  test_artifacts_listing.py  test_autorun_step_retries.py  test_brief_chat_streaming.py  test_brief_messages.py  test_briefs.py  test_cascade_delete.py  test_export_and_glossary.py  test_health.py  test_kg_and_lint.py  test_license.py  test_novel_to_script_auto_split_by_length_workflow.py  test_novel_to_script_episode_workflow.py  test_open_threads.py  test_prompting_json_repair.py  test_propagation_engine.py  test_settings.py  test_sqlite_mode.py  test_workflow_embeddings_fallback.py  test_workflow_fork_and_rewrite.py  test_workflow_intervention_chat.py  test_workflow_next.py  test_workflow_streaming_and_autorun.py
(+239 files in other folders)
